flex/flex-tests/testData/flex_highlighting/FxComponent.mxml
<?xml version="1.0"?>
<mx:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
                xmlns:s="library://ns.adobe.com/flex/spark"
                xmlns:mx="library://ns.adobe.com/flex/mx">

    <fx:Script><![CDATA[
        // Variable in the Application scope.
        public var localVar:String = "Application localVar";
        ]]></fx:Script>

    <mx:DataGrid>
        <mx:columns>
            <mx:DataGridColumn>
                <mx:itemRenderer>
                    <<error descr="Element mx:Component is not allowed here">mx:Component</error>>
                        <mx:VBox/>
                    </<error descr="Element mx:Component is not allowed here">mx:Component</error>>
                    <<error descr="Component tag should not be empty">fx:Component</error>/>
                    <fx:Component>
                        <mx:VBox implements="mx.styles.IStyleClient">
                            <fx:Script><![CDATA[
                                // Variable in the renderer scope.
                                public var localVar:String = "Renderer localVar";
                                ]]></fx:Script>
                            <mx:TextArea text="{'Renderer localVar= ' + localVar}" <error>implements</error>="mx.styles.IStyleClient"/>
                            <mx:TextArea text="{'App localVar= ' + outerDocument.localVar}"/>
                        </mx:VBox>
                    </fx:Component>
                    <fx:Component className="A">
                        <s:Rect implements="<error>Incorrect</error>"/>
                    </fx:Component>
                    <fx:Component>
                        <<error>s:HTTPService</error>/>
                    </fx:Component>
                </mx:itemRenderer>
            </mx:DataGridColumn>
        </mx:columns>
    </mx:DataGrid>
</mx:Application>

        